ci: fix sonar issues